Fixing h2 word wrap

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -143,7 +143,7 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   font-weight: 700;
-  display: inline;
+  display: inline-block;
   background-image: -webkit-gradient(linear, left top, right top, from(#1ed56f), to(#28b485));
   background-image: -webkit-linear-gradient(left, #1ed56f, #28b485);
   background-image: -o-linear-gradient(left, #1ed56f, #28b485);
@@ -159,7 +159,8 @@ body {
       font-size: 3rem; } }
   @media (max-width: 37.5em) {
     .heading-secondary {
-      font-size: 2.5rem; } }
+      font-size: 2.5rem;
+      word-wrap: break-word; } }
   .heading-secondary:hover {
     -webkit-transform: skewY(20deg);
     -ms-transform: skewY(20deg);
